google-service.json

--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ Icon?
 ehthumbs.db
 Thumbs.db
 serviceAccountKey.json
-google-services.json
+# google-services.json
 google-services.json.meta
 google-services-desktop.json
 google-services-desktop.json.meta
